force-app/main/default/objects/Event__c/Event__c.object-meta.xml
<CustomObject>
    <label>Мероприятие</label>
    <nameField>
        <label>Название мероприятия</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Мероприятия</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>