force-app/main/default/objects/Event__c/fields/Dormitory__c.field-meta.xml
<CustomField>
    <fullName>Dormitory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Общежитие</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Мероприятия</relationshipLabel>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>