force-app/main/default/objects/Event__c/fields/Event_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Event_DateTime__c</fullName>
    <label>Дата мероприятия</label>
    <type>DateTime</type>
</CustomField>