force-app/main/default/objects/Event__c/fields/Event_Place__c.field-meta.xml
<CustomField>
    <fullName>Event_Place__c</fullName>
    <label>Место проведения</label>
    <length>255</length>
    <type>Text</type>
</CustomField>