force-app/main/default/objects/Event__c/fields/Max_Students__c.field-meta.xml
<CustomField>
    <fullName>Max_Students__c</fullName>
    <label>Максимальное число студентов</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>